language/move-lang/tests/move_check/typing/declare_pop_resource.exp
error: 

   ┌── tests/move_check/typing/declare_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {f: u64}
   │     -------- Is found to be a non-copyable type here
   ·
 5 │         let _: R;
   │             ^ Cannot ignore resource values. The value must be used
   │                - The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/declare_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {f: u64}
   │     -------- Is found to be a non-copyable type here
   ·
 6 │         let _r: R;
   │             ^^ Cannot ignore resource values. The value must be used
   │                 - The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/declare_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {f: u64}
   │     -------- Is found to be a non-copyable type here
   ·
 7 │         let (_, _):(R, R);
   │              ^ Cannot ignore resource values. The value must be used
   │                     - The type: '0x8675309::M::R'
   │

error: 

   ┌── tests/move_check/typing/declare_pop_resource.move:2:5 ───
   │
 2 │     resource struct R {f: u64}
   │     -------- Is found to be a non-copyable type here
   ·
 7 │         let (_, _):(R, R);
   │                 ^ Cannot ignore resource values. The value must be used
   │                        - The type: '0x8675309::M::R'
   │

