language/move-lang/tests/move_check/typing/declare_pop_resource.move
module M {
    resource struct R {f: u64}

    fun t0() {
        let _: R;
        let _r: R;
        let (_, _):(R, R);
    }
}
